tdf#91887 handle LOK_MOUSEEVENT_MOUSEMOVE in SdXImpressDocument

Change-Id: If6948e523fd681dbe289909df68364806628ead6